# limonada

./: .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  autofmt.sh  buffer.c  buffer.h  color.c  color.h  cp437.xpm  embed.c  gui.c  gui.h  hsv.h  hsvtable.go  icon.xpm  main.c  makefile  platform.c  platform.h  res.rc  slice.c  slice.h  state.c  state.h  tools.xpm
